# pruebas-rust

./: .gitignore  Cargo.toml  README.md
migrations/2022-09-27-093218_usuarios_rust/: down.sql  up.sql
src/: config.rs  getapi.rs  leer.rs  main.rs  models.rs  odoo.rs  rectangulotype.rs  rlib.rs  schema.rs  triangulorectangulotype.rs  usuariosrust.rs
src/vistas/: mod.rs
