[package]
name = "rust_comienzo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "rust_comienzo"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
diesel = { version = "2.0.0", features = ["mysql"] }

dotenv = "0.15.0" 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"


