[package]
name = "rust_comienzo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[[bin]]
name = "rust_comienzo"
# path = "src/odoo.rs" 

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
diesel = { version = "2.0.0", features = ["mysql"] }
async_odoors = "1.0.0"
axum = "0.5.16"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

dotenv = "0.15.0" 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "2.0.1"
rand = "0.8.4"


